Fix alignment issue

--- a/app/styles/_clues_view.scss
+++ b/app/styles/_clues_view.scss
@@ -42,6 +42,8 @@
   background-size: cover;
   position: relative;
   box-shadow: 0 10px 40px 0 rgba(0,0,0,0.50);
+  margin: auto;
+  text-align: center;
 }
 
 .clue figcaption {
